@@ -1211,7 +1211,7 @@
 
 /* Define to the full name and version of this package. */
 #ifndef MAGICKCORE_PACKAGE_STRING
-#define MAGICKCORE_PACKAGE_STRING "ImageMagick 6.8.6-4"
+#define MAGICKCORE_PACKAGE_STRING "ImageMagick 6.8.6-3"
 #endif
 
 /* Define to the one symbol short name of this package. */
@@ -1226,7 +1226,7 @@
 
 /* Define to the version of this package. */
 #ifndef MAGICKCORE_PACKAGE_VERSION
-#define MAGICKCORE_PACKAGE_VERSION "6.8.6-4"
+#define MAGICKCORE_PACKAGE_VERSION "6.8.6-3"
 #endif
 
 /* Define if you have PANGOCAIRO library */
@@ -1438,7 +1438,7 @@
 
 /* Version number of package */
 #ifndef MAGICKCORE_VERSION
-#define MAGICKCORE_VERSION "6.8.6-4"
+#define MAGICKCORE_VERSION "6.8.6-3"
 #endif
 
 /* Define if you have WEBP library */
