@@ -13,7 +13,7 @@ PACKAGE_NAME='ImageMagick'
 PACKAGE_VERSION='6.8.6'
 PACKAGE_PERL_VERSION='6.86'
 PACKAGE_LIB_VERSION="0x686"
-PACKAGE_RELEASE="4"
+PACKAGE_RELEASE="3"
 PACKAGE_LIB_VERSION_NUMBER="6,8,6,${PACKAGE_RELEASE}"
 PACKAGE_RELEASE_DATE=`date +%F`
 PACKAGE_STRING="$PACKAGE_NAME $PACKAGE_VERSION"
