@@ -6,12 +6,14 @@
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=22384).
   * Prefer external log configuration file to built-in (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23640).
-  * Do log in the IsLinkedListEmpty() method to prevent overflow (reference
+  * Do not log in the IsLinkedListEmpty() method to prevent overflow (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23640).
   * Fix bug loading TGA image with 32-bit palette (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=17889).
   * Color profiles are no longer corrupted for the JPEG format (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23651).
+  * Repair problem with -emboss / -equalize problem (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=23643).
 
 2013-06-24  6.8.6-2 Cristy  <quetzlzacatenango@image...>
   * New version 6.8.6-2, SVN revision 12561.
